<resources>
    <string name="app_name">Klear</string>
    <string name="your_waste_our_responsibility">your waste, our responsibility</string>
    <string name="title">klear</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="facing_any_inconvenience">Facing any inconvenience?</string>
    <string name="sign_up">Sign up</string>
    <string name="contact_us">Contact Us</string>
    <string name="proceed_with_google">Proceed with Google</string>
    <string name="dashboard_heading">Namaste,\nWould you like to save the environment today?</string>
    <string name="sell_your_waste">Sell your Waste</string>
    <string name="only_recyclable_doe">only recyclable doe</string>
    <string name="create">Create</string>
    <string name="best_out_of_waste">best out of waste</string>
    <string name="donate">Donate</string>
    <string name="help">help help help help</string>
    <string name="profile">Profile</string>
    <string name="check_your_score">check your score</string>
</resources>
