<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:id="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/title"
        android:fontFamily="@font/productsans"
        android:layout_centerHorizontal="true"
        android:textColor="#1565C0"
        android:textSize="58sp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/logo"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_waste_our_responsibility"
        android:textColor="#BF000000"
        android:layout_below="@id/title"
        android:fontFamily="@font/productsans"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#1565C0"
            android:fontFamily="@font/productsans"
            android:paddingStart="60dp"
            android:paddingTop="10dp"
            android:paddingEnd="60dp"
            android:paddingBottom="10dp"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="24sp"
            app:cornerRadius="25dp"
            android:onClick="goToSignUp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/productsans"
                android:textColor="#BF000000"
                android:text="@string/already_have_an_account"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/login"
                android:textSize="18sp"
                android:textColor="#1565C0"
                android:fontFamily="@font/productsans"
                android:onClick="goToLogin"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>