<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:id="@+id/title_layout"
        android:background="#1565C0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:fontFamily="@font/productsans"
            android:textSize="34sp"
            android:layout_margin="16dp"
            android:textColor="#fff"
            android:layout_alignParentBottom="true"
            android:textStyle="bold"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/title_layout"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/email"
            app:boxCornerRadiusTopStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            android:layout_marginTop="8dp"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/productsans"
                android:textSize="20sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/password"
            app:boxCornerRadiusTopStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            android:layout_marginTop="8dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/productsans"
                android:textSize="20sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/ic_arrow_forward_black_24dp"
            app:iconSize="30dp"
            app:iconPadding="0dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            app:cornerRadius="60dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:layout_gravity="end"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:iconSize="22dp"
            android:backgroundTint="#eee"
            app:icon="@drawable/google_g"
            app:iconTint="#bf000000"
            android:text="@string/continue_with_google"
            android:textColor="#BF000000"
            android:textSize="14sp"
            app:cornerRadius="18dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/productsans"
                android:textColor="#BF000000"
                android:text="@string/dont_have_an_account"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/sign_up"
                android:textSize="18sp"
                android:textColor="#1565C0"
                android:fontFamily="@font/productsans"
                android:onClick="goToSignUp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>