<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#1565C0">

        <TextView
            android:id="@+id/dashboard_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            android:fontFamily="@font/productsans"
            android:text="@string/dashboard_heading"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_layout"
        android:layout_marginTop="-30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="160dp"
                    android:layout_height="200dp"
                    android:elevation="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="15dp"
                    app:strokeColor="#1565C0"
                    app:strokeWidth="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/place_order_icon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/productsans"
                            android:text="@string/sell_your_waste"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/productsans"
                            android:text="@string/only_recyclable_doe"
                            android:textAlignment="center"
                            android:textColor="@color/dashboard_gray"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="160dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="20dp"
                    android:elevation="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="15dp"
                    app:strokeColor="#1565C0"
                    app:strokeWidth="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/create_icon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/productsans"
                            android:text="@string/create"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/productsans"
                            android:text="@string/best_out_of_waste"
                            android:textAlignment="center"
                            android:textColor="@color/dashboard_gray"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="160dp"
                    android:layout_height="200dp"
                    android:elevation="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="15dp"
                    app:strokeColor="#1565C0"
                    app:strokeWidth="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/donate_icon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/productsans"
                            android:text="@string/donate"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/productsans"
                            android:text="@string/help"
                            android:textAlignment="center"
                            android:textColor="@color/dashboard_gray"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="160dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="20dp"
                    android:elevation="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="15dp"
                    app:strokeColor="#1565C0"
                    app:strokeWidth="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/profile_icon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/productsans"
                            android:text="@string/profile"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/productsans"
                            android:text="@string/check_your_score"
                            android:textAlignment="center"
                            android:textColor="@color/dashboard_gray"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:fontFamily="@font/productsans"
            android:text="@string/facing_any_inconvenience"
            android:textColor="#BF000000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:fontFamily="@font/productsans"
            android:text="@string/contact_us"
            android:textColor="#1565C0"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>